Document upload formatting, Map Panel formatting (remove ajax boundary)

--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -8,7 +8,7 @@
 		<div class='col-sm-3'>
 			<div><label class="control-label">Estimated Phase Completion</label><p>{{ projTomb.project.dateCurrentPhaseEstimatedEnd | amDateFormat:'MMM Do YYYY' }}</p></div>
 			<div><label class="control-label">Current Phase</label><p x-phase-colour x-phase="projTomb.project.currentPhase">{{ projTomb.project.currentPhase | phaseName:projTomb.project.phases }}</p></div>
-			<div><label class="control-label">Next Phase</label><p x-phase-colour x-phase="projTomb.project.nextPhase">{{ projTomb.project.nextPhase }}</p></div>
+			<!-- <div><label class="control-label">Next Phase</label><p x-phase-colour x-phase="projTomb.project.nextPhase">{{ projTomb.project.nextPhase }}</p></div> -->
 		</div>
 
 		<div class='col-sm-6'>
