--- a/modules/publicComments/client/views/partials/public-comments-display.html
+++ b/modules/publicComments/client/views/partials/public-comments-display.html
@@ -9,7 +9,7 @@
 
 
 
-	<div class="panel-body">
+	<div class="panel-body" ng-if="pubComDisp.project.dateCommentsOpen">
 		<div class="small form-group">
 
 			<h3>Submitting Your Comments: How It Works</h3>
