--- a/modules/documents/client/views/partials/document-upload-classify.html
+++ b/modules/documents/client/views/partials/document-upload-classify.html
@@ -1,5 +1,5 @@
 <label class="control-label">Upload Documents</label>
-<div class="well well-sm clearfix">
+<div class="well well-sm container-fluid">
 	<div class="row">
 		<div class="col-md-12">
 		    <div ngf-drop ngf-select ng-model="files" class="drop-box"
@@ -11,52 +11,65 @@
 		        ngf-pattern="'image/*,application/pdf'">Drop files here or click to upload
 		    </div>
 		</div>
-		<div class="text-center" colspan=4 class="text-center">
-			<table class="table table-condensed">
-				<thead>
-					<tr class="small">
-						<th width="33%">Type</th>
-						<th width="33%">Sub Type</th>
-						<th width="33%">Folder Name</th>
-					</tr>
-				</thead>
-				<tbody>
-						<td ng-if="!f.$error && !f.progress">
-							<select class="form-control" ng-options="type as type.name group by (type.group | uppercase) for type in docUpload.docTypes track by type.code" ng-model="docUpload.type"></select>
-						</td>
-						<td ng-if="!f.$error && !f.progress">
-							<select class="form-control" ng-options="stype as stype.name group by (stype.group | uppercase) for stype in docUpload.docSubTypes track by stype.code" ng-model="docUpload.subType"></select>
-						</td>
-						<td ng-if="!f.$error && !f.progress">
-							<select class="form-control" ng-options="ftype for ftype in docUpload.docFolderNames | unique: 'projectFolderName'" ng-model="docUpload.folderName"></select>
-						</td>
-				</tbody>
-			</table>
+	</div>
+
+	<div class="row">
+		<div class="col-sm-4">
+		
 		</div>
 	</div>
 
 	<table class="table table-condensed">
 		<thead>
+			<tr class="small" colspan="3">
+				<th>Type and Destination for New Documents</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td width="33%" style="padding-top: 5px;">
+					<div class="form-group">
+						<label class="control-label">Type</label>
+						<select class="form-control" ng-options="type as type.name group by (type.group | uppercase) for type in docUpload.docTypes track by type.code" ng-model="docUpload.type"></select>					
+					</div>
+				</td>
+				<td width="34%" style="padding-top: 5px;">
+					<div class="form-group">
+						<label class="control-label">Sub Type</label>
+						<select class="form-control" ng-options="stype as stype.name group by (stype.group | uppercase) for stype in docUpload.docSubTypes track by stype.code" ng-model="docUpload.subType"></select>					
+					</div>
+				</td>
+				<td width="33%" style="padding-top: 5px;">
+					<div class="form-group">
+						<label class="control-label">Folder Name</label>
+						<select class="form-control" ng-options="ftype for ftype in docUpload.docFolderNames | unique: 'projectFolderName'" ng-model="docUpload.folderName"></select>					
+					</div>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+
+	<table class="table table-condensed">
+		<thead>
 			<tr class="small">
-				<th width="30%">File</th>
+				<th>Files</th>
 				<th width="10%"></th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr ngf-no-file-drop>
-				<td class="text-center" colspan=4>
+				<td class="text-center" colspan=2>
 					<p class="form-control-static">File Drag/Drop is not supported for this browser</p>
 				</td>
 			</tr>
 			<tr ng-if="!files">
-				<td class="text-center" colspan=4 class="text-center">
+				<td class="text-center" colspan=2 class="text-center">
 					<p class="form-control-static">Drag a file to the dashed region above to upload.</p>
 				</td>
 			</tr>
 			<tr ng-repeat="f in docUpload.fileList" ng-class="{'danger': f.$error}">
 
-
-				<td ng-if="f.$error" colspan=4>
+				<td ng-if="f.$error" colspan=2>
 					<p class="form-control-static text-danger">FILE ERROR: {{f.name}} {{f.$error}} {{f.$errorParam}}</p>
 				</td>
 
@@ -67,22 +80,13 @@
 					<p class="form-control-static"><a href ng-click="docUpload.removeFile(f)"><span class="glyphicon glyphicon-remove"></span></a></p>
 				</td>
 
-				<td ng-if="!f.$error">
+				<td ng-if="!f.$error && f.progress">
 					<div class="progress" ng-show="f.progress >= 0" style="margin-top: 7px;"><div class="progress-bar progress-bar-success" role="progressbar" style="width:{{f.progress}}%" ng-bind="f.progress + '%'">{{ f.progress }}</div></div>
 				</td>
-
-
 
 			</tr>
 		</tbody>
 	</table>
 
-	<div class="row" ng-if="!docUpload.inProgress && !docUpload.hideUploadButton && false">
-		<div class="col-sm-12 text-right">
-			<button ng-click="docUpload.upload()" ng-if="docUpload.fileList.length > 0" class="btn btn-success">
-				Upload Queued Documents
-			</button>
-		</div>
-	</div>
 </div>
 
