--- a/modules/maps/client/views/partials/map-layers.html
+++ b/modules/maps/client/views/partials/map-layers.html
@@ -5,7 +5,7 @@
 	<div class='container-fluid'>
 		<div class='row'>
 			<div class='col-md-9 col-no-padding' ng-init="mpl.showPoint = true">
-				<map center="54.726668, -127.647621" zoom="5" style='height: 500px' map-type-id="ROADMAP" min-zoom="5" max-zoom="10" disable-default-u-i="true">
+				<map center="{{ mpl.point }}" zoom="5" style='height: 500px' map-type-id="ROADMAP" min-zoom="5" max-zoom="10" disable-default-u-i="true">
 					
 					<marker id="marker_point" position="{{ mpl.point }}" ng-if="mpl.showPoint"></marker>
 					<!-- <kml-layer url="https://ajax.projects.eao.gov.bc.ca:443/map_layers/Ajax_2016Jan7data_Footprint_25Buffer_filled.kml" ng-if="mpl.showKML"></kml-layer> -->
