--- a/modules/projects/client/views/projects.html
+++ b/modules/projects/client/views/projects.html
@@ -13,10 +13,13 @@
 		</div>
 
 		<div class="row">
-			<div class="col-lg-6">
+			<div class="col-lg-12">
 				<tmpl-projects-map id="anchor-map" x-projects='projects.projects'></tmpl-projects-map>
 			</div>
-			<div class="col-lg-6">
+		</div>
+
+		<div class="row">		
+			<div class="col-lg-12">
 				<tmpl-projects-schedule id="anchor-schedule" x-projects='projects.projects'></tmpl-projects-schedule>
 			</div>
 		</div>
