--- a/modules/documents/client/views/partials/document-upload-classify.html
+++ b/modules/documents/client/views/partials/document-upload-classify.html
@@ -40,10 +40,27 @@
 					</div>
 				</td>
 				<td width="33%" style="padding-top: 5px;">
-					<div class="form-group">
+
+					<!-- there are no folders or a custom folder is requested -->
+					<div class="form-group ng-hide" ng-show="docUpload.docFolderNames.length === 0 || docUpload.customFolder">
+						<a href class="control-label pull-right" ng-click="docUpload.customFolder = !docUpload.customFolder">
+							<span>From Existing</span>
+						</a>
+
 						<label class="control-label">Folder Name</label>
-						<select class="form-control" ng-options="ftype for ftype in docUpload.docFolderNames | unique: 'projectFolderName'" ng-model="docUpload.folderName"></select>					
+						<input class="form-control ng-cloak" x-select-on-focus ng-model="docUpload.folderName" placeholder="New Folder Name">
 					</div>
+
+					<div class="form-group ng-hide" ng-show="docUpload.docFolderNames.length !== 0 && !docUpload.customFolder">
+						<a href class="control-label pull-right" ng-click="docUpload.customFolder = !docUpload.customFolder">
+							<span>New Folder</span>
+						</a>
+
+						<label class="control-label">Folder Name</label>
+						<select class="form-control" ng-options="ftype for ftype in docUpload.docFolderNames | unique: 'projectFolderName'" ng-model="docUpload.folderName"></select>
+					</div>
+
+
 				</td>
 			</tr>
 		</tbody>
