Adding back versions, model changes

--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -62,9 +62,9 @@
 					<li>
 						Revisions:
 					</li>
-					<!-- <li ng-repeat="docVersion in docBrowser.docVersions">
+					<li ng-repeat="docVersion in docBrowser.docVersions">
 						<a href="{{ docVersion.documentFileURL }}">{{ docVersion.dateUpdated | date : format : timezone}}: {{ docVersion.documentVersion }} <span class="glyphicon glyphicon-download"></span></a>
-					</li> -->
+					</li>
 				</ul>
 			</div>
 		</div>
