Hooking up Reject document from approvals UI

--- a/modules/documents/client/views/partials/document-approvals.html
+++ b/modules/documents/client/views/partials/document-approvals.html
@@ -44,7 +44,7 @@
 						<p>File Format: {{ docBrowser.rDoc.documentFileFormat }}</p>
 						<p>File Size: {{ docBrowser.rDoc.documentFileSize }}</p>
 						<button class="btn btn-default" type="button" ng-click="docBrowser.downloadAndApprove(docBrowser.rDoc)">Approve</button>
-						<button class="btn btn-default" type="button" ng-click="docBrowser.reject(docBrowser.rDoc)">Reject</button>
+						<button class="btn btn-default" type="button" ng-click="docBrowser.rejectDocument(docBrowser.rDoc)">Reject</button>
 					</li>
 				</ul>
 			</div>
