--- a/modules/documents/client/views/partials/document-approvals.html
+++ b/modules/documents/client/views/partials/document-approvals.html
@@ -1,5 +1,6 @@
 <section class="block-content">
-	<h3>Documents in Review</h3>
+	<h3><a href class="small pull-right" x-modal-document-upload-review x-project="docBrowser.project" ng-if="docBrowser.authentication.user">Upload <span class="glyphicon glyphicon-upload"></span> </a>
+		Documents in Review</h3>
 
 	<div class='container-fluid'>
 		<div class='row'>
