--- a/modules/projects/client/views/projects-partials/projects-schedule.html
+++ b/modules/projects/client/views/projects-partials/projects-schedule.html
@@ -1,5 +1,7 @@
 <section class='panel panel-default'>
-
+	<div class="block-content">
+		<h3>Current Projects</h3>
+	</div>
 	<table class="table table-condensed table-striped">
 		<thead>
 			<tr>
