--- a/modules/configuration/client/views/partials/manage-activities.html
+++ b/modules/configuration/client/views/partials/manage-activities.html
@@ -6,18 +6,20 @@
                 <thead class="small">
                 <th width="15%">Code</th>
                 <th width="20%">Name</th>
-                <th width="40%">Description</th>
-                <th width="25%">Process Code</th>                
+                <th width="30%">Description</th>
+                <th width="25%">Process Code</th> 
+                <th class="text-center">Order</th>              
                 </thead>
                 <tbody>
-                <tr ng-repeat="activity in configDataElement.data.activities | orderBy:'name'" ng-click='configDataElement.editRecord(activity)' class="clickable">
+                <tr ng-repeat="activity in configDataElement.data.activities | orderBy:'order'" ng-click='configDataElement.editRecord(activity)' class="clickable">
                     <td>{{ activity.code }}</td>
                     <td>{{ activity.name }}</td>
                     <td>{{ activity.description }}</td>
                     <td>{{ activity.processCode }}</td>
+                    <td class="text-center">{{ activity.order }}</td>
                 </tr>
                 <tr ng-if="configDataElement.data.activities.length === 0">
-                    <td colspan="4">No activities defined.</td>
+                    <td colspan="5">No activities defined.</td>
                 </tr>
                 </tbody>
             </table>
@@ -54,6 +56,11 @@
                         </select>
                     </div>
 
+                    <div class="form-group">
+                        <label class="control-label">Order</label>
+                        <input class="form-control" type="number" ng-model="configDataElement.activeRecord.order">
+                    </div>
+
 
                     <div class="form-group">
                         <a href
@@ -70,7 +77,7 @@
 
                         <ul class="list-unstyled well well-sm">
                             <li ng-show="configDataElement.activeRecord.tasks.length === 0">No Tasks selected</li>
-                            <li ng-repeat="task in configDataElement.activeRecord.tasks track by $index"><em class="small text-success">task:</em>&nbsp;{{ task.name }}</li>
+                            <li ng-repeat="task in configDataElement.activeRecord.tasks | orderBy:'order' track by $index"><em class="small text-success">task:</em>&nbsp;{{ task.name }}</li>
                         </ul>
 
 
