--- a/modules/configuration/client/views/partials/manage-streams.html
+++ b/modules/configuration/client/views/partials/manage-streams.html
@@ -4,18 +4,20 @@
 		<div class="col-sm-7">
 			<table class="table table-condensed table-striped table-hover">
 				<thead class="small">
-					<th width="30%">Code</th>
+					<th width="20%">Code</th>
 					<th width="30%">Name</th>
 					<th width="40%">Description</th>
+					<th width="10%" class="text-center">Order</th>
 				</thead>
 				<tbody>
-				<tr ng-repeat="stream in configDataElement.data.streams | orderBy:'name'" ng-click='configDataElement.editRecord(stream)' class="clickable">
+				<tr ng-repeat="stream in configDataElement.data.streams | orderBy:'order'" ng-click='configDataElement.editRecord(stream)' class="clickable">
 					<td>{{ stream.code }}</td>
 					<td>{{ stream.name }}</td>
 					<td>{{ stream.description }}</td>
+					<td class="text-center">{{ stream.order }}</td>
 				</tr>
 				<tr ng-if="configDataElement.data.streams.length === 0">
-					<td colspan="3">No streams defined.</td>
+					<td colspan="4">No streams defined.</td>
 				</tr>
 				</tbody>
 			</table>
@@ -52,6 +54,11 @@
 						</div>
 					</div>
 
+	                    <div class="form-group">
+	                        <label class="control-label">Order</label>
+	                        <input class="form-control" type="number" ng-model="configDataElement.activeRecord.order">
+	                    </div>
+
 					<div class="form-group">
 						<a href
 							class="control-label pull-right"
@@ -67,7 +74,7 @@
 
 						<ul class="list-unstyled well well-sm">
 							<li ng-show="configDataElement.activeRecord.phases.length === 0">No Phases selected</li>
-							<li ng-repeat="phase in configDataElement.activeRecord.phases track by $index"><em class="small text-success">phase:</em>&nbsp;{{ phase.name }}</li>
+							<li ng-repeat="phase in configDataElement.activeRecord.phases | orderBy:'order' track by $index"><em class="small text-success">phase:</em>&nbsp;{{ phase.name }}</li>
 						</ul>
 
 	                    </div>
