--- a/modules/users/client/views/admin/edit-user.client.view.html
+++ b/modules/users/client/views/admin/edit-user.client.view.html
@@ -29,6 +29,12 @@
           </div>
         </div>
         <div class="form-group">
+          <label class="control-label" for="roles">Password</label>
+          <div class="controls">
+          <input type="text" id="password" name="password" class="form-control" ng-model="user.password" placeholder="First Name" />
+          </div>
+        </div>
+        <div class="form-group">
           <input type="submit" value="Update" class="btn btn-default">
         </div>
         <div ng-show="error" class="text-danger">
